refactor(go-actions): /rpc/:method
